--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donutopia</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -31,6 +33,8 @@
         <h1>Bem-vindo a Donutopia!</h1>
         <p>Um lugar mágico e saboroso, onde todos os seus desejos de donuts se tornam realidade.</p>
     </div>
+
+    <a href="#" class="cart-btn"><i class="fa fa-shopping-cart"></i></a>
 
     <div class="container">
         <div class="row">
