Papel de parede

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">Donutopia</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,12 +29,12 @@
         </div>
     </nav>
 
+    <a href="#" class="cart-btn"><i class="fa fa-shopping-cart"></i></a>
+
     <div class="container my-5">
         <h1>Bem-vindo a Donutopia!</h1>
         <p>Um lugar mágico e saboroso, onde todos os seus desejos de donuts se tornam realidade.</p>
     </div>
-
-    <a href="#" class="cart-btn"><i class="fa fa-shopping-cart"></i></a>
 
     <div class="container">
         <div class="row">
@@ -115,3 +115,6 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</body>
