--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <a class="navbar-brand" href="#">
                 <img src="img/donut-icone2.png.png" height="45" class="d-inline-block align-top" alt="Logo Donutopia"> Donutopia
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> -->
         </div>
         <div class="collapse navbar-collapse pl-5" id="navbarNav">
             <ul class="navbar-nav">
