--- a/index.html
+++ b/index.html
@@ -11,111 +11,110 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="navbar-content">
-            <a class="navbar-brand" href="#">
-                <img src="img/donut-icone2.png.png" height="45" class="d-inline-block align-top" alt="Logo Donutopia"> Donutopia
-            </a>
-            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button> -->
-        </div>
-        <div class="collapse navbar-collapse pl-5" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Donuts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contato</a>
-                </li>
-            </ul>
+        <div class="content">
+            <div class="navbar-content">
+                <a class="navbar-brand" href="#">
+                    <img src="img/donut-icone2.png.png" height="45" class="d-inline-block align-top" alt="Logo Donutopia"> Donutopia
+                </a>
+                <div class="nav-links d-none d-lg-block">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Donuts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contato</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </nav>
 
     <a href="#" class="cart-btn"><i class="fa fa-shopping-cart"></i></a>
 
-    <div class="container my-5">
-        <h1>Bem-vindo a Donutopia!</h1>
-        <p>Um lugar mágico e saboroso, onde todos os seus desejos de donuts se tornam realidade.</p>
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                    <img class="card-img-top" src="img/donut-choco.png" alt="Donut de chocolate">
-                    <div class="card-body">
-                        <h4 class="card-title">Donut de chocolate</h4>
-                        <p class="card-text">Feito com os melhores ingredientes, este donut de chocolate é irresistível.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Comprar</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                    <img class="card-img-top" src="img/donut-morango.png" alt="Donut de morango">
-                    <div class="card-body">
-                        <h4 class="card-title">Donut de morango</h4>
-                        <p class="card-text">Feito com morangos frescos, este donut é a escolha perfeita para quem ama frutas.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Comprar</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                    <img class="card-img-top" src="img/donut-baunilha.png" alt="Donut de baunilha">
-                    <div class="card-body">
-                        <h4 class="card-title">Donut de baunilha</h4>
-                        <p class="card-text">Este donut de baunilha é simples e delicioso.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Comprar</a>
-                    </div>
-                </div>
-            </div>
+    <div class="content">
+        <div class="container my-5">
+            <h1>Bem-vindo a Donutopia!</h1>
+            <p>Um lugar mágico e saboroso, onde todos os seus desejos de donuts se tornam realidade.</p>
         </div>
-
-        <div class="row">
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                    <img class="card-img-top" src="img/donut-limao.png" alt="Donut de limão">
-                    <div class="card-body">
-                        <h4 class="card-title">Donut de limão</h4>
-                        <p class="card-text">Refrescante e ácido, este donut de limão é uma ótima opção para o verão.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Comprar</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                    <img class="card-img-top" src="img/donut-ninho.png" alt="Donut de leite ninho">
-                    <div class="card-body">
-                        <h4 class="card-title">Donut de leite ninho</h4>
-                        <p class="card-text">Feito com leite ninho, este donut é a escolha perfeita para quem ama um sabor suave e cremoso.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Comprar</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
-                        <img class="card-img-top" src="img/donut-doceleite.png" alt="Donut de doce de leite">
+                        <img class="card-img-top" src="img/donut-choco.png" alt="Donut de chocolate">
                         <div class="card-body">
-                            <h4 class="card-title">Donut de doce de leite</h4>
-                            <p class="card-text">Feito com doce de leite cremoso, este donut é a escolha perfeita para quem ama um sabor doce e suave.</p>
+                            <h4 class="card-title">Donut de chocolate</h4>
+                            <p class="card-text">Feito com os melhores ingredientes, este donut de chocolate é irresistível.</p>
                         </div>
                         <div class="card-footer">
                             <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <img class="card-img-top" src="img/donut-morango.png" alt="Donut de morango">
+                        <div class="card-body">
+                            <h4 class="card-title">Donut de morango</h4>
+                            <p class="card-text">Feito com morangos frescos, este donut é a escolha perfeita para quem ama frutas.</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <img class="card-img-top" src="img/donut-baunilha.png" alt="Donut de baunilha">
+                        <div class="card-body">
+                            <h4 class="card-title">Donut de baunilha</h4>
+                            <p class="card-text">Este donut de baunilha é simples e delicioso.</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <img class="card-img-top" src="img/donut-limao.png" alt="Donut de limão">
+                        <div class="card-body">
+                            <h4 class="card-title">Donut de limão</h4>
+                            <p class="card-text">Refrescante e ácido, este donut de limão é uma ótima opção para o verão.</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <img class="card-img-top" src="img/donut-ninho.png" alt="Donut de leite ninho">
+                        <div class="card-body">
+                            <h4 class="card-title">Donut de leite ninho</h4>
+                            <p class="card-text">Feito com leite ninho, este donut é a escolha perfeita para quem ama um sabor suave e cremoso.</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card h-100">
+                            <img class="card-img-top" src="img/donut-doceleite.png" alt="Donut de doce de leite">
+                            <div class="card-body">
+                                <h4 class="card-title">Donut de doce de leite</h4>
+                                <p class="card-text">Feito com doce de leite cremoso, este donut é a escolha perfeita para quem ama um sabor doce e suave.</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
